--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"client": {
-		"host": "GodsownDC.aternos.me:47098",
+		"host": "GodsownDC.aternos.me",
 		"port": "47098",
 		"username": "Koran_BOT"
 	},
